# kontext-copilot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  LICENSE  README.md  alembic.ini  build.ps1  kontext-ai.sln  pyproject.toml
.github/workflows/: bump-version.yml  pre-commit.yml  publish-to-pypi.yml
client-app/: .eslintrc  app.config.ts  app.vue  nuxt.config.ts  package-lock.json  package.json
client-app/assets/scss/: _kontext.scss  site.scss
client-app/components/: llm-settings.vue  ollama-model-selector.vue  sidebar.vue  theme-toggle.vue
client-app/components/chat/: chat-message.vue
client-app/composables/: useOllamaModels.ts  usePageTitle.ts  useSettings.ts  useUsername.ts
client-app/layouts/: default-layout.vue
client-app/pages/: chat-ollama.vue  chat.vue  embedding-generator.vue  index.vue  prompt-engineering.vue  settings.vue
client-app/services/: ApiServices.ts  OllamaLlmService.ts
client-app/types/: Models.ts  Schemas.ts  UIProps.ts
client-app/utils/: ChatUtils.ts
docs/: solution-diagram.drawio
kontext_ai/: logging_config.ini  main.py  utils.py
kontext_ai/api/: README.md
kontext_ai/api/data_providers/: __init__.py  _requests_handler.py
kontext_ai/api/data_sources/: __init__.py  _requests_handler.py
kontext_ai/api/llm/: __init__.py  _llm_requests_handler.py  _requests_handler.py  _types.py
kontext_ai/api/prompts/: __init__.py  _prompts_handler.py  prompts.json
kontext_ai/api/settings/: __init__.py  _setting_requests_handler.py
kontext_ai/data/: utils.py
kontext_ai/data/alembic/: README  env.py
kontext_ai/data/models/: __init__.py  _db_models.py  db_models.py
kontext_ai/data/providers/: __init__.py  _provider.py  _provider_factory.py
kontext_ai/data/schemas/: __init__.py  __setting.py  _data.py  _data_source.py  _prompt.py  _setting.py
kontext_ai/llms/: __init__.py  _model.py
kontext_ai/llms/TinyLlama/: README.md
kontext_ai/ollama/: __init__.py  _client.py
kontext_ai/services/: __init__.py  _data_source_service.py  _db_service.py  _settings_service.py
kontext_ai/services/_data_provider_service/: __init__.py  _provider.py  _service.py
kontext_copilot/: logging_config.ini  main.py  utils.py
kontext_copilot/api/copilot/: __init__.py  _requests_handler.py
kontext_copilot/api/data_providers/: __init__.py  _requests_handler.py
kontext_copilot/api/data_sources/: __init__.py  _requests_handler.py
kontext_copilot/api/llm/: __init__.py  _requests_handler.py
kontext_copilot/api/prompts/: __init__.py  _requests_handler.py
kontext_copilot/api/settings/: __init__.py  _requests_handler.py
kontext_copilot/copilot/: __init__.py  _copilot_orchestrator.py  _copilot_session.py  _planner.py  _prompt_factory.py  _session.py  _types.py  prompts.json
kontext_copilot/copilot/prompts/: sentiment-analysis.md  system-prompt-da-metadata-file-source.md  system-prompt-da-metadata-refined.md  system-prompt-da-metadata.md  system-prompt-default.md  text-to-sql-static.md
kontext_copilot/copilot/tools/: _base_tool.py  _chart_renderer.py  _charts_recommend_tool.py  _data_analyser.py  _llm_chat_tool.py  (+3 more)
kontext_copilot/data/: Chinook-LICENSE.md  utils.py
kontext_copilot/ollama/: __init__.py  _client.py  _types.py
kontext_copilot/services/: __init__.py  _data_source_service.py  _db_service.py  _session_service.py  _settings_service.py  _singleton.py  _utils.py
src/Kontext.AI.ClientApp/: App.razor  Program.cs  _Imports.razor
src/client-app/: README.md  package-lock.json
src/frontend/: README.md
ui/: .eslintrc  .prettierrc  README.md  app.config.ts  app.vue  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json
ui/components/: help-menu.vue  init-setup.vue  llm-model-selector.vue  llm-settings-button.vue  llm-settings.vue  ollama-model-selector.vue  sidebar-nav-item.vue  sidebar.vue  theme-toggle.vue
ui/composables/: useAppServices.ts  useModels.ts  useOllamaModels.ts  usePageTitle.ts  useSettings.ts
ui/layouts/: default-layout.vue
ui/pages/: chat-ollama.vue  chat-to-data.vue  chat.vue  data-sources.vue  embedding-generator.vue  index.vue  prompt-engineering.vue  settings.vue  tools.vue
ui/plugins/: DomPurify.ts
ui/services/: ApiServices.ts  CopilotClientService.ts  LlmClientService.ts  LlmProxyService.ts  LlmService.ts  OllamaLlmService.ts
ui/types/: Errors.ts  Schemas.ts  UIProps.ts
ui/utils/: ChatUtils.ts  CommonUtils.ts  DependencyInjection.ts  MarkdownitTableClass.ts
(+97 files in other folders)
