[tool.poetry]
name = "kontext-copilot"
version = "0.3.1"
description = "Kontext Copilot is an AI empowered assistant for data analytics that can run on your local computer."
authors = ["Kontext <enquiry@kontext.tech>"]
readme = "README.md"
homepage = "https://kontext.tech/copilot"
repository = "https://github.com/kontext-tech/kontext-copilot"
license = "MIT"
# Include the static website folder in the package
include = ["kontext_copilot/ui/**/*", "kontext_copilot/copilot/**/*.json", "kontext_copilot/copilot/**/*.md", "kontext_copilot/data/Chinook_Sqlite.db", "kontext_copilot/data/Chinook-LICENSE.md", "kontext_copilot/data/alembic/alembic.ini"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
python-dotenv = "^1.0.1"
pre-commit = "^3.7.1"
typing-extensions = ">=4.10.0,<5.0.0"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"

pydantic = "^2.8.2"
colorlog = "^6.8.2"
duckdb = "^1.0.0"
pyarrow = "^17.0.0"
duckdb-engine = "^0.13.1"
pyodbc = "^5.1.0"
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver2"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.3,<9.0.0"
pytest-asyncio = "^0.23.2"
pytest-cov = ">=4.1,<6.0"
pytest-httpserver = "^1.0.8"
pillow = "^10.2.0"
ruff = ">=0.1.8,<0.5.0"

commitizen = "^3.27.0"

[tool.poetry.scripts]
kontext-copilot = "kontext_copilot.main:main"

[tool.ruff]
line-length = 999
indent-width = 2

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = '--doctest-modules --ignore examples'
